samples/_failures_safe/1761198603_b4bb69_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f1fda125.c: In function ‘handle_event’:
./samples/SAFE/__tmp_f1fda125.c:142:5: error: expected declaration or statement at end of input
  142 |     if (sm == NULL || tt == NULL) return 0;
      |     ^~
